<resources>
    <string name="app_name">ITventory</string>
    <string-array name="branch_array">
        <item>Banjarmasin</item>
        <item>Sampit</item>
        <item>Bagendang</item>
        <item>Kotabaru</item>
        <item>Batulicin</item>
        <item>Mekarputih</item>
        <item>Kumai</item>
        <item>Bumiharjo</item>
    </string-array>
    <string-array name="stock_active_array">
        <item>Aktif</item>
        <item>Non Aktif</item>
    </string-array>
    <string-array name="stock_category_array">
        <item>Semua</item>
        <item>Komputer</item>
        <item>Part komputer</item>
        <item>UPS</item>
        <item>Printer</item>
        <item>CCTV</item>
        <item>Jaringan</item>
        <item>Server</item>
        <item>Handheld</item>
        <item>Display</item>
        <item>Presensi</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="server_category_array">
        <item>Semua</item>
        <item>Server</item>
        <item>Router</item>
        <item>Man_Switch</item>
        <item>Switch</item>
        <item>Wireless_Router</item>
        <item>Smart_UPS</item>
        <item>UPS</item>
        <item>PC</item>
        <item>Stabilizer</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="server_category_post">
        <item>Server</item>
        <item>Router</item>
        <item>Man_Switch</item>
        <item>Switch</item>
        <item>Wireless_Router</item>
        <item>Smart_UPS</item>
        <item>UPS</item>
        <item>PC</item>
        <item>Stabilizer</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="computer_location_array">
        <item>---</item>
        <item>Bjm_Reg</item>
        <item>Bjm_Trisakti</item>
        <item>Bjm_TPKB</item>
        <item>Bjm_Pulpis</item>
    </string-array>
    <string-array name="computer_division_array">
        <item>---</item>
        <item>Umum</item>
        <item>Operasional</item>
        <item>Komersial</item>
        <item>Teknik</item>
        <item>Keuangan</item>
        <item>TIK</item>
        <item>SMI</item>
        <item>GM</item>
        <item>Server</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="computer_division_array_post">
        <item>Umum</item>
        <item>Operasional</item>
        <item>Komersial</item>
        <item>Teknik</item>
        <item>Keuangan</item>
        <item>TIK</item>
        <item>SMI</item>
        <item>GM</item>
        <item>Server</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="computer_seat_manajemen_array">
        <item>---</item>
        <item>true</item>
        <item>false</item>
    </string-array>
    <string-array name="computer_status_array">
        <item>---</item>
        <item>Baik</item>
        <item>Backup</item>
        <item>Rusak</item>
        <item>Hilang</item>
    </string-array>
    <string-array name="cctv_status_array">
        <item>---</item>
        <item>Aktif</item>
        <item>Backup</item>
        <item>Rusak</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="cctv_status_array_post">
        <item>Aktif</item>
        <item>Backup</item>
        <item>Rusak</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="printer_status_array">
        <item>---</item>
        <item>Baik</item>
        <item>Backup</item>
        <item>Rusak</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="printer_status_array_post">
        <item>Baik</item>
        <item>Backup</item>
        <item>Rusak</item>
        <item>Lainnya</item>
    </string-array>
    <string-array name="cctv_history_status">
        <item>Pengecekan</item>,
        <item>Diperbaiki</item>,
        <item>Bermasalah</item>,
        <item>Rusak</item>,
        <item>Pindah_Tempat</item>,
        <item>Dibersihkan</item>,
        <item>Digudangkan</item>,
        <item>Dimusnahkan</item>,
        <item>Hilang</item>
    </string-array>
    <string-array name="printer_history_status">
        <item>Refill_Tinta</item>,
        <item>Diperbaiki</item>,
        <item>Bermasalah</item>,
        <item>Rusak</item>,
        <item>Pindah_Tempat</item>,
        <item>Dibersihkan</item>,
        <item>Digudangkan</item>,
        <item>Dimusnahkan</item>,
        <item>Hilang</item>
    </string-array>
    <string-array name="server_history_status">
        <item>Pengecekan</item>,
        <item>Diperbaiki</item>,
        <item>Disetting</item>,
        <item>Bermasalah</item>,
        <item>Rusak</item>,
        <item>Pindah_Tempat</item>,
        <item>Dibersihkan</item>,
        <item>Digudangkan</item>,
        <item>Dimusnahkan</item>,
        <item>Hilang</item>
    </string-array>
    <string-array name="history_select">
        <item>Komputer</item>
        <item>Printer</item>
        <item>Server</item>
        <item>CCTV</item>
    </string-array>
    <string name="error">Server Sleep</string>
    <string name="dot">Dot Point</string>
    <string name="identitas">Identitas</string>
    <string name="nama_user">Nama User</string>
    <string name="informasi_perangkat">Informasi Perangkat</string>
    <string name="spesifikasi">Spesifikasi</string>
    <string name="save_finish">Simpan Selesai</string>
    <string name="save_continue">Simpan Lanjut</string>
    <string name="nama_host_komputer">Nama Host Komputer</string>
    <string name="alamat_ip">Alamat IP</string>
    <string name="nomer_inventaris">Nomer Inventaris</string>
    <string name="cabang">Cabang</string>
    <string name="divisi">Divisi</string>
    <string name="lokasi_khusus_bjm">Lokasi (Khusus BJM)</string>
    <string name="jenis_perangkat">Jenis Perangkat</string>
    <string name="merk_tipe">Merk / Tipe</string>
    <string name="tahun_pengadaan">Tahun Pengadaan</string>
    <string name="status">Status</string>
    <string name="note">Catatan</string>
    <string name="name">Name</string>
    <string name="simpan">SIMPAN</string>
    <string name="tambah_history">Tambah Riwayat</string>
    <string name="detail">Detail</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_intro">Muchlis built the ITventory app as a Free app. This SERVICE is provided by Muchlis at
        no cost and is intended for use as is. This page is used to inform visitors regarding my policies with the
        collection, use, and disclosure of Personal Information if anyone decided to use my Service. If you choose to
        use my Service, then you agree to the collection and use of information in relation to this policy. The Personal
        Information that I collect is used for providing and improving the Service. I will not use or share your
        information with anyone except as described in this Privacy Policy. The terms used in this Privacy Policy have
        the same meanings as in our Terms and Conditions, which is accessible at ITventory unless otherwise defined in
        this Privacy Policy.
    </string>
    <string name="info_coll_use">For a better experience, while using our Service, I may require you to provide us with
        certain personally identifiable information. The information that I request will be retained on your device and
        is not collected by me in any way. The app does use third party services that may collect information used to
        identify you. Link to privacy policy of third party service providers used by the app Google Play Services
    </string>
    <string name="information_collection_and_use">Information Collection and Use</string>
    <string name="log_data">Log Data</string>
    <string name="log_desc">I want to inform you that whenever you use my Service, in a case of an error in the app I
        collect generalData and information (through third party products) on your phone called Log Data. This Log Data may
        include information such as your device Internet Protocol (“IP”) address, device name, operating system version,
        the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other
        statistics.
    </string>
    <string name="cookies">Cookies</string>
    <string name="cookie_desc">Cookies are files with a small amount of generalData that are commonly used as anonymous unique
        identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s
        internal memory. This Service does not use these “cookies” explicitly. However, the app may use third party code
        and libraries that use “cookies” to collect information and improve their services. You have the option to
        either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to
        refuse our cookies, you may not be able to use some portions of this Service.
    </string>
    <string name="service_providers">Service Providers</string>
    <string name="serv_desc">I may employ third-party companies and individuals due to the following reasons: To
        facilitate our Service; To provide the Service on our behalf; To perform Service-related services; or To assist
        us in analyzing how our Service is used. I want to inform users of this Service that these third parties have
        access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However,
        they are obligated not to disclose or use the information for any other purpose.
    </string>
    <string name="security">Security</string>
    <string name="sec_desc">I value your trust in providing us your Personal Information, thus we are striving to use
        commercially acceptable means of protecting it. But remember that no method of transmission over the internet,
        or method of electronic storage is 100 percent secure and reliable, and I cannot guarantee its absolute security.
    </string>
    <string name="children_s_privacy">Children’s Privacy</string>
    <string name="child_desc">These Services do not address anyone under the age of 13. I do not knowingly collect
        personally identifiable information from children under 13. In the case I discover that a child under 13 has
        provided me with personal information, I immediately delete this from our servers. If you are a parent or
        guardian and you are aware that your child has provided us with personal information, please contact me so that
        I will be able to do necessary actions.
    </string>
    <string name="changes_to_this_privacy_policy">Changes to This Privacy Policy</string>
    <string name="change_desc">I may update our Privacy Policy from time to time. Thus, you are advised to review this
        page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this
        page. These changes are effective immediately after they are posted on this page.
    </string>
    <string name="if_you_have_any_questions_or_suggestions_about_my_privacy_policy_do_not_hesitate_to_contact_me_at_muchlis_pelindo_co_id_this_privacy_policy_page_was_created_at_privacypolicytemplate_net_and_modified_generated_by_app_privacy_policy_generator">
        If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at
        muchlis@pelindo.co.id. This privacy policy page was created at privacypolicytemplate.net and modified/generated
        by App Privacy Policy Generator
    </string>
    <string name="contact_us">Contact Us</string>
    <string name="tambah_nama_stok">Tambah Nama Stok</string>
    <string name="nama_stok">Nama Stok</string>
    <string name="satuan">Satuan</string>
    <string name="ambang_batas">Ambang Batas</string>
    <string name="lokasi_catatan">Lokasi / Catatan</string>
    <string name="kategori">Kategori</string>
</resources>