<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:id="@+id/add_history_title"
              android:text="@string/tambah_history" android:layout_marginTop="64dp"
              android:layout_marginStart="8dp" android:textSize="24sp"
              android:fontFamily="@font/quicksand_bold"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/add_history_title"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:id="@+id/linearLayout_ide"
            android:layout_marginTop="16dp">

        <ImageView
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="@dimen/spacing_middle"
                android:layout_margin="@dimen/spacing_medium"
                android:src="@drawable/shape_circle"
                android:tint="@color/red_400" android:contentDescription="@string/dot"/>

        <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_80" android:fontFamily="@font/quicksand"/>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="1dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_ide" android:layout_marginTop="8dp"
            android:id="@+id/cv_ide">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/name"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large" android:fontFamily="@font/quicksand"
                    android:id="@+id/tv_add_history_name"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_5"/>

            <TextView
                    android:id="@+id/et_add_history_status"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_arrow_drop_grey"
                    android:gravity="center_vertical"
                    android:focusable="false"
                    android:hint="@string/status"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large" android:fontFamily="@font/quicksand"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_5"/>

            <EditText
                    android:id="@+id/et_add_history_note"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:hint="@string/note"
                    android:minHeight="@dimen/spacing_xxlarge"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large"
                    android:fontFamily="@font/quicksand"
                    android:inputType="textMultiLine|text"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_5"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
            android:text="@string/simpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_add_history"
            app:layout_constraintTop_toBottomOf="@id/cv_ide"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"/>

    <FrameLayout
            android:id="@+id/pb_frame_add_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/progress_frame_color"
            android:clickable="true"
            android:elevation="5dp"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>