<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/add_stock_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="64dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="@string/tambah_nama_stok"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/add_stock_title_branch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/add_stock_title"
            app:layout_constraintTop_toBottomOf="@+id/add_stock_title"
            tools:text="Sampit" />

    <LinearLayout
            android:id="@+id/linearLayout_ide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_stock_title_branch">

        <ImageView
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="@dimen/spacing_middle"
                android:layout_margin="@dimen/spacing_medium"
                android:contentDescription="@string/dot"
                android:src="@drawable/shape_circle"
                android:tint="@color/red_400" />

        <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="0dp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:text="@string/detail"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_80" />

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="1dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_ide" android:layout_marginTop="8dp"
            android:id="@+id/cv_ide">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <EditText
                    android:id="@+id/et_add_stock_name"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/quicksand"
                    android:gravity="center_vertical"
                    android:hint="@string/nama_stok"
                    android:inputType="text"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_5"/>

            <TextView
                    android:id="@+id/et_add_stock_category"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_arrow_drop_grey"
                    android:focusable="false"
                    android:fontFamily="@font/quicksand"
                    android:gravity="center_vertical"
                    android:hint="@string/kategori"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_5"/>

            <EditText
                    android:id="@+id/et_add_stock_unit"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/quicksand"
                    android:gravity="center_vertical"
                    android:hint="@string/satuan"
                    android:inputType="text"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_5"/>

            <EditText
                    android:id="@+id/et_add_stock_thresold"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xxlarge"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/quicksand"
                    android:gravity="center_vertical"
                    android:hint="@string/ambang_batas"
                    android:inputType="number"
                    android:minHeight="@dimen/spacing_xmlarge"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_5"/>

            <EditText
                    android:id="@+id/et_add_stock_note"
                    style="@style/EditText.Flat.Grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/quicksand"
                    android:gravity="center_vertical"
                    android:hint="@string/lokasi_catatan"
                    android:inputType="textMultiLine|text"
                    android:minHeight="@dimen/spacing_xxlarge"
                    android:paddingLeft="@dimen/spacing_large"
                    android:paddingRight="@dimen/spacing_large" />

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_5"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
            android:id="@+id/bt_add_stock_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/save_continue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_ide" />

            <Button
                    android:id="@+id/bt_add_stock_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/button_color_second"
                    android:text="@string/save_finish"
                    app:layout_constraintEnd_toEndOf="@+id/bt_add_stock_continue"
                    app:layout_constraintStart_toStartOf="@+id/bt_add_stock_continue"
                    app:layout_constraintTop_toBottomOf="@+id/bt_add_stock_continue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <FrameLayout
            android:id="@+id/pb_frame_add_stock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/progress_frame_color"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>